Prevent overflow

--- a/frontend/src/metabase/parameters/components/WidgetStatusButton/WidgetStatusButton.module.css
+++ b/frontend/src/metabase/parameters/components/WidgetStatusButton/WidgetStatusButton.module.css
@@ -1,4 +1,3 @@
 .root {
-  margin-left: auto;
   flex: 0 0 auto;
 }
